//
// vim:ts=4:sw=4:ai:et:si:sts=4
//

message ReqAccountType {
    optional string email = 1701;
    optional uint32 id =  1702;
    optional string passwd = 1703;
    optional bool ansi = 1704;
    optional bool confirmed = 1705;
    optional string confcode = 1706;
}
